--- a/UIT-main/stranice/turniri.html
+++ b/UIT-main/stranice/turniri.html
@@ -12,7 +12,7 @@
 			<div class="header">
 				<a href="../index.html">
 					<div class="logo">
-						<img src="../slike/logo.svg" alt="LOGO IMAGE" />
+						<img src="../slike/logo.png" alt="Logo" />
 						<div>Game ON!</div>
 					</div>
 				</a>
