Very slight change

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 			<div class="hero">
 				<p>Oprema je ista. Razlika je u tebi</p>
 				<p>Mesto gde prestaje zabava i počinje borba za vrh.</p>
+				<a class="heroBtn" href="./stranice/kontakt.html">Pridruzi se</a>
 			</div>
 		</main>
 		<footer>
