--- a/stranice/turniri.html
+++ b/stranice/turniri.html
@@ -17,62 +17,14 @@
 					</div>
 				</a>
 				<div class="navMain">
-					<div><a href="#">Turniri</a></div>
-					<div><a href="./galerija.html">Galerija</a></div>
-					<div><a href="./tabela.html">Tabela</a></div>
+					<div><img src="../slike/trophy.svg" alt="trofej" /><a href="#">Turniri</a></div>
+					<div><img src="../slike/image.svg" alt="slika" /><a href="./galerija.html">Galerija</a></div>
+					<div><img src="../slike/table.svg" alt="tabela" /><a href="./tabela.html">Tabela</a></div>
 				</div>
 				<a class="kontaktBtn" href="./kontakt.html">Kontakt</a>
 			</div>
 		</nav>
-		<main>
-			<div class="card">
-				<div class="versus">
-					<div class="team">
-						<img src="../slike/skull.jpg" alt="skull" />
-						<div class="overlay">
-							<span class="overlayText">Skull Empire</span>
-						</div>
-					</div>
-					<div>VS</div>
-					<div class="team">
-						<img src="../slike/elusivity.jpg" alt="elusivity" />
-						<div class="overlay">
-							<span class="overlayText">Elusivity</span>
-						</div>
-					</div>
-				</div>
-				<div class="info">
-					<p><img src="../slike/date.svg" alt="datum" />Datum: 25.12.2025</p>
-					<p><img src="../slike/time.svg" alt="vreme" />Vreme: 20:00h</p>
-					<p><img src="../slike/location.svg" alt="lokacija" />Lokacija: Stark Arena</p>
-				</div>
-			</div>
-
-			<!-- SECOND CARD -->
-			<div class="card">
-				<div class="versus">
-					<div class="team">
-						<img src="../slike/nightSaber.jpg" alt="Night Saber" />
-						<div class="overlay">
-							<span class="overlayText">Night Saber</span>
-						</div>
-					</div>
-					<div>VS</div>
-					<div class="team">
-						<img src="../slike/warrior.jpg" alt="Warrior" />
-						<div class="overlay">
-							<span class="overlayText">Warrior</span>
-						</div>
-					</div>
-				</div>
-				<div class="info">
-					<p><img src="../slike/date.svg" alt="datum" />Datum: 25.12.2025</p>
-					<p><img src="../slike/time.svg" alt="vreme" />Vreme: 20:00h</p>
-					<p><img src="../slike/location.svg" alt="lokacija" />Lokacija: Stark Arena</p>
-				</div>
-			</div>
-		</main>
-
+		<main></main>
 		<footer>
 			<div class="footer">footer</div>
 		</footer>
