ne znma jel se ista promenilo

--- a/stranice/turniri.html
+++ b/stranice/turniri.html
@@ -29,7 +29,7 @@
 		<main>
 			<div class="title">
 				<h2 id="kup">Letnji Kup</h2>
-				<h3 id="datum">5/10/2025</h3>
+				<h3 id="datum">05/07/2025</h3>
 				<select name="game" id="game">
 					<option value="lol">League Of Legends</option>
 					<option value="CSGO">CS:GO 2</option>
@@ -40,20 +40,20 @@
 					<p>Pocetak</p>
 					<div class="bracket">
 						<div class="group">
-							<div class="win">Team 1</div>
-							<div class="lose">Team 2</div>
+							<div class="win">Shadow Pulse</div>
+							<div class="lose">Crimson Reign</div>
 						</div>
 						<div class="group">
-							<div class="lose">Team 1</div>
-							<div class="win">Team 2</div>
+							<div class="lose">Void Syndicate</div>
+							<div class="win">Iron Howl</div>
 						</div>
 						<div class="group">
-							<div class="win">Team 1</div>
-							<div class="lose">Team 2</div>
+							<div class="win">Nova Circuit</div>
+							<div class="lose">Frostbyte Clan</div>
 						</div>
 						<div class="group">
-							<div class="win">Team 1</div>
-							<div class="lose">Team 2</div>
+							<div class="win">Echo Strikers</div>
+							<div class="lose">Quantum Rift</div>
 						</div>
 					</div>
 				</div>
@@ -62,12 +62,12 @@
 					<p>Polu Finale</p>
 					<div class="bracket">
 						<div class="group">
-							<div class="lose">Team 1</div>
-							<div class="win">Team 2</div>
+							<div class="lose">Shadow Pulse</div>
+							<div class="win">Iron Howl</div>
 						</div>
 						<div class="group">
-							<div class="lose">Team 1</div>
-							<div class="win">Team 2</div>
+							<div class="lose">Nova Circuit</div>
+							<div class="win">Echo Strikers</div>
 						</div>
 					</div>
 				</div>
@@ -76,8 +76,8 @@
 					<p>Finale</p>
 					<div class="bracket">
 						<div class="group">
-							<div class="win">Team 1</div>
-							<div class="lose">Team 2</div>
+							<div class="win">Iron Howl</div>
+							<div class="lose">Echo Strikers</div>
 						</div>
 					</div>
 				</div>
@@ -86,7 +86,7 @@
 					<p>Pobednik</p>
 					<div class="bracket">
 						<div class="group">
-							<div class="win">Team 1</div>
+							<div class="win">Iron Howl</div>
 						</div>
 					</div>
 				</div>
