--- a/index.html
+++ b/index.html
@@ -1,40 +1,68 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="sr">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Game On | e-sport</title>
-		<link rel="stylesheet" href="./assets/main.css" />
+		<title>Pocetna</title>
 		<link rel="stylesheet" href="./assets/shared.css" />
+		<link rel="stylesheet" href="./assets/main.css" />
 	</head>
 	<body>
 		<header>
+			<div class="logo"><a href="./index.html">LEVEL UP</a></div>
 			<nav>
-				<div class="header">
-					<a href="#">
-						<div class="logo">
-							<img src="./slike/logo.png" alt="Logo" />
-							<div>Game ON!</div>
-						</div>
-					</a>
-					<div class="navMain">
-						<div><img src="./slike/trophy.svg" alt="trofej" /><a href="./stranice/turniri.html">Turniri</a></div>
-						<div><img src="./slike/image.svg" alt="slika" /><a href="./stranice/galerija.html">Galerija</a></div>
-						<div><img src="./slike/table.svg" alt="tabela" /><a href="./stranice/tabela.html">Tabela</a></div>
-					</div>
-					<a class="kontaktBtn" href="./stranice/kontakt.html">Kontakt</a>
+				<ul>
+					<li><a href="./stranice/turniri.html">TURNIRI</a></li>
+					<li><a href="./stranice/galerija.html">GALERIJA</a></li>
+					<li><a href="./stranice/tabela.html">TABELA</a></li>
+					<li><a href="./stranice/kontakt.html">KONTAKT</a></li>
+				</ul>
+				<div class="burger">
+					<div></div>
+					<div></div>
+					<div></div>
 				</div>
 			</nav>
 		</header>
-		<main>
-			<div class="hero">
-				<p>Oprema je ista. Razlika je u tebi</p>
-				<p>Mesto gde prestaje zabava i počinje borba za vrh.</p>
-				<a class="heroBtn" href="./stranice/kontakt.html">Pridruzi se</a>
+
+		<section class="hero">
+			<div class="hero-text">
+				<h1>LEVEL UP</h1>
+				<h2>ESPORTS</h2>
+				<p>Oseti uzbuđenje takmičarskog gejminga i budi deo akcije. Prati najnovije turnire, nadmaši svoje protivnike i priključi se zajednici koja živi za esport. Testiraj svoje veštine, upoznaj igrače iz celog sveta i doživi pravo takmičarsko iskustvo u <span class="greenTxt">Level Up</span> zajednici.</p>
+				<a href="./stranice/kontakt.html" class="btn">PRIDRUŽI SE</a>
 			</div>
-		</main>
+			<img src="./slike/heroImg.png" alt="Hero Img" />
+		</section>
+		<section class="section">
+			<h2>O NAMA</h2>
+			<p>Mi smo zajednica gejmera i esport entuzijasta, posvećeni organizovanju turnira i stvaranju nezaboravnog takmičarskog iskustva. Povezujemo igrače i timove, podržavamo mlade talente i promovišemo esports kulturu širom regiona.</p>
+		</section>
+
+		<section class="section">
+			<h2>PREDSTOJEĆI TURNIRI</h2>
+			<div class="events">
+				<div class="event-card">
+					<div class="date">15. Septembar</div>
+					<div class="name">TURNIR</div>
+				</div>
+				<div class="event-card">
+					<div class="date">18. Septembar</div>
+					<div class="name">EKSKLUZIVNI TURNIR</div>
+				</div>
+				<div class="event-card">
+					<div class="date">27. Decembar</div>
+					<div class="name">ŠAMPIONAT</div>
+				</div>
+			</div>
+		</section>
+
 		<footer>
-			<div class="footer">footer</div>
+			&copy; 2025 <span class="greenTxt">Level Up</span> Esports. Sva prava zadržana.
+			<div class="visited-pages">
+				<p>Najposećenije stranice:</p>
+				<ol id="visitedList"></ol>
+			</div>
 		</footer>
 		<script src="./assets/script.js"></script>
 	</body>
