--- a/stranice/kontakt.html
+++ b/stranice/kontakt.html
@@ -1,32 +1,62 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="sr">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Game On | Kontakt</title>
+		<title>Kontakt</title>
 		<link rel="stylesheet" href="../assets/shared.css" />
+		<link rel="stylesheet" href="../assets/kontakt.css" />
 	</head>
 	<body>
-		<nav>
-			<div class="header">
-				<a href="../index.html">
-					<div class="logo">
-						<img src="../slike/logo.svg" alt="LOGO IMAGE" />
-						<div>Game ON!</div>
-					</div>
-				</a>
-				<div class="navMain">
-					<div><a href="./turniri.html">Turniri</a></div>
-					<div><a href="./galerija.html">Galerija</a></div>
-					<div><a href="./tabela.html">Tabela</a></div>
+		<header>
+			<div class="logo"><a href="../index.html">LEVEL UP</a></div>
+			<nav>
+				<ul>
+					<li><a href="./turniri.html">TURNIRI</a></li>
+					<li><a href="./galerija.html">GALERIJA</a></li>
+					<li><a href="./tabela.html">TABELA</a></li>
+					<li><a href="./kontakt.html">KONTAKT</a></li>
+				</ul>
+				<div class="burger">
+					<div></div>
+					<div></div>
+					<div></div>
 				</div>
-				<a class="kontaktBtn" href="#">Kontakt</a>
-			</div>
-		</nav>
-		<div style="flex-grow: 1"></div>
+			</nav>
+		</header>
+
+		<section class="section">
+			<h2>PRIJAVA TIMA</h2>
+			<form id="kontaktForm">
+				<input type="text" id="ime" placeholder="Ime" required />
+
+				<input type="text" id="prezime" placeholder="Prezime" required />
+
+				<input type="email" id="email" placeholder="Email" required />
+				<span class="wrong" id="mailWrong"></span>
+
+				<input type="password" id="lozinka" placeholder="Lozinka" required />
+				<span class="wrong" id="passWrong"></span>
+
+				<input type="password" id="potvrda" placeholder="Potvrdi lozinku" required />
+				<span class="wrong" id="confirmWrong"></span>
+
+				<input type="text" id="imeTima" placeholder="Ime tima" required />
+
+				<textarea id="imenaIgraca" rows="5" placeholder="Imena svih igrača u timu" required></textarea>
+
+				<button type="submit" class="btn">POŠALJI</button>
+			</form>
+		</section>
+
 		<footer>
-			<div class="footer">footer</div>
+			&copy; 2025 <span class="greenTxt">Level Up</span> Esports. Sva prava zadržana.
+			<div class="visited-pages">
+				<p>Najposećenije stranice:</p>
+				<ol id="visitedList"></ol>
+			</div>
 		</footer>
-		<script src="./assets/script.js"></script>
+		<script src="../assets/script.js"></script>
+		<script src="../assets/formValid.js"></script>
 	</body>
 </html>
